--- a/services/billing-notify-batch/serverless.yml
+++ b/services/billing-notify-batch/serverless.yml
@@ -18,6 +18,6 @@ provider:
 
 functions:
   billing-notify-batch :
-    handler: handler.rb
+    handler: handler.lambda_handler
     events:
       - schedule: cron(0 12 * * ? *)
